--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,10 +34,12 @@ android {
 
 dependencies {
 
-    implementation 'com.google.dagger:dagger:2.28.3'
-    kapt 'com.google.dagger:dagger-compiler:2.28.3'
+    implementation 'com.google.dagger:dagger:2.27'
+    kapt 'com.google.dagger:dagger-compiler:2.27'
 
-    implementation 'androidx.core:core-ktx:1.9.0'
+    kapt "androidx.room:room-compiler:2.4.3"
+
+    implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
